crates/core/tests/compile_fail/unit_struct.rs
use sutures::Seam;

#[derive(Seam)]
struct Bad;

fn main() {}
